<resources>
    <string name="app_name">DylanApp</string>

    <!--通用-->
    <string name="common_exit">再按一次退出程序</string>
    <string name="common_next">下一步</string>
    <string name="common_last">上一步</string>
    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>
    <string name="common_reset">重置</string>
    <string name="common_commit">提交</string>
    <string name="common_save">保存</string>
    <string name="common_unsupport">不支持的类型</string>
    <string name="common_empty">暂无数据</string>
    <string name="common_error">链接超时啦，请检查网络~</string>
    <string name="common_save_success">保存成功</string>
    <string name="common_save_failed">保存失败</string>
    <string name="common_false">否</string>
    <string name="common_true">是</string>
    <string name="common_no_more">没有更多数据了</string>
    <string name="common_hint_title">提示</string>
    <string name="common_loading">数据正在加载中</string>
    <string name="common_dialog">常用对话框</string>


    <!---->
    <string name="title_name">标题</string>

    <!--底部tab菜单-->
    <string name="tab_houses">楼盘</string>
    <string name="tab_customer">客户</string>
    <string name="tab_my">我的</string>

    <!---->
    <string name="title_msg">我的消息</string>









    <string name="my_login">登录</string>
    <string name="my_count">倒计时</string>
    <string name="my_blur">高斯模糊</string>
    <string name="my_time_select">时间选择器</string>
    <string name="my_pulltorefresh">下拉刷新控件</string>
    <string name="my_change_head">changeHead</string>
    <string name="my_loadcontact">loadcontact</string>
    <string name="my_editinput">输入框</string>
    <string name="my_flex_listview">FlexListView</string>
    <string name="my_touch_view">TouchView</string>





    <string name="customer_report_loaderror">手机号码格式不正确</string>







</resources>
